--- a/cell02/ex03/card.html
+++ b/cell02/ex03/card.html
@@ -11,8 +11,8 @@
     <div class="card">
         <img src="https://preview.redd.it/black-shiba-inu-v0-jrs55zyba9uc1.jpeg?width=2252&format=pjpg&auto=webp&s=032e9cd39e17a4895e2c7cb704e612a99d58a7ab" alt="">
         <div class="content">
-            <p class="h1">Cartoon 42</p>
-            <p class="small-text1">Level 42, Good in Sleep</p>
+            <p class="h1">Cartoon 22</p>
+            <p class="small-text1">Level 42, Good at Sleep</p>
             <p class="small-text2">42 Bangkok</p>
             <div class="svg">
                 <svg width="28" class="svg-icon" viewBox="0 0 20 20">
